--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-
 /* :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -140,8 +139,8 @@ li {
 .section_title {
   text-align: center;
   font-weight: 500;
-  font-size: 28px;
-  line-height: 44px;
+  font-size: px-to-rem(28px);
+  line-height: px-to-rem(44px);
   margin-bottom: 20px;
 }
 
