--- a/src/components/common/AboutInstructor/about-instructor.module.scss
+++ b/src/components/common/AboutInstructor/about-instructor.module.scss
@@ -1,3 +1,6 @@
+@import "../../../styles/mixins";
+@import "../../../styles/function";
+
 .section_content {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -7,7 +10,7 @@
   .about_image {
     img {
       max-width: 100%;
-      max-height: 100%;
+      height: 100%;
     }
   }
   .about_content {
@@ -15,9 +18,9 @@
     text-align: center;
 
     &_title {
-      font-weight: 500;
-      font-size: 24px;
-      line-height: 44px;
+      font-weight: 600;
+      font-size: px-to-rem(24px);
+      line-height: px-to-rem(44px);
 
       &::before {
         content: "";
@@ -29,15 +32,15 @@
         background-color: #000;
       }
 
-        &::after {
-          content: "";
-          display: inline-block;
-          margin-left: 20px;
-          width: 112px;
-          height: 1px;
-          vertical-align: middle;
-          background-color: #000;
-        }
+      &::after {
+        content: "";
+        display: inline-block;
+        margin-left: 20px;
+        width: 112px;
+        height: 1px;
+        vertical-align: middle;
+        background-color: #000;
+      }
     }
 
     &_text {
@@ -45,6 +48,22 @@
       font-size: 16px;
       line-height: 24px;
       margin: 36px 0;
+    }
+  }
+}
+
+@include media("mobile") {
+  .section_content {
+    grid-template-columns: 1fr;
+  }
+  .about_content {
+    text-align: start !important;
+
+    &_title {
+      &::after,
+      &::before {
+        display: none !important;
+      }
     }
   }
 }
