--- a/src/components/common/Faq/faq.module.scss
+++ b/src/components/common/Faq/faq.module.scss
@@ -5,8 +5,8 @@
   justify-content: space-between;
   align-items: center;
   gap: 36px;
-
   @include media("mobile") {
     flex-direction: column;
+    max-width: fit-content;
   }
 }
