--- a/src/components/common/Header/header.module.scss
+++ b/src/components/common/Header/header.module.scss
@@ -4,7 +4,7 @@
 .header {
   padding: px-to-rem(12px) 0;
   background-color: #fff;
-  transition: box-shadow 0.5s, position 0.5s;
+  transition: background-color 0.3s, box-shadow 0.3s, position 0.3s; /* Add transition */
   z-index: 1000;
 }
 
@@ -18,8 +18,8 @@
   background-color: #fbfefb;
   top: 0;
   width: 100%;
+  transition: background-color 0.3s, box-shadow 0.3s, position 0.3s; /* Add transition */
 }
-
 .navbar {
   display: flex;
   justify-content: space-between;
