--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,6 +118,8 @@ body {
   font-size: 16px;
   font-family: "Roboto", sans-serif;
   scroll-behavior: smooth;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 a {
