--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -136,14 +136,15 @@ li {
 }
 
 .section {
-  padding: 30px 0;
+  margin: 20px 0;
+  padding: 20px 0;
 }
 .section_title {
   text-align: center;
-  font-weight: 500;
-  font-size: px-to-rem(28px);
-  line-height: px-to-rem(44px);
-  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+  margin-bottom: 36px;
 }
 
 @media screen and (max-width: 768px) {
