--- a/src/components/common/Header/header.module.scss
+++ b/src/components/common/Header/header.module.scss
@@ -8,8 +8,9 @@
   z-index: 1000;
 }
 
-.mobile_menu {
+.mobile_menu_icon {
   display: none;
+  font-size: 28px;
 }
 
 .sticky {
@@ -62,7 +63,7 @@
   .header {
     position: relative;
   }
-  .mobile_menu {
+  .mobile_menu_icon {
     display: block;
   }
 
