--- a/src/components/common/Header/HeaderMobile/mobile-header.module.scss
+++ b/src/components/common/Header/HeaderMobile/mobile-header.module.scss
@@ -1,10 +1,22 @@
 .mobile_header {
+  width: 100%;
+  position: sticky;
+  top: 0px;
+  background-color: #fff;
+  padding: 15px 0;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
+  z-index: 1000;
+}
+
+.mobile_navbar {
   display: flex;
   justify-content: space-between;
-  padding: 20px 0;
   .mobile_logo {
+    font-size: 24px;
   }
 
   .mobile_menu {
+    font-size: 24px;
   }
 }
