--- a/src/components/ui/SectionTitle/section-title.module.scss
+++ b/src/components/ui/SectionTitle/section-title.module.scss
@@ -1,10 +1,12 @@
+@import "../../../styles/function";
 .section_title {
   font-weight: 500;
-  font-size: 24px;
-  line-height: 36px;
+  font-size: px-to-rem(24px);
+  line-height: px-to-rem(36px);
 }
 
-.section_row{
+.section_row {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
